# mvc-v6-digital-neuron

./: .env.example  .env.models.example  .lintstagedrc  .prettierignore  .prettierrc  CLEANUP-PLAN.md  CONTRIBUTING.md  DESKTOP_BUILD.md  LICENSE  LOCAL_DEPLOYMENT.md  PROJECT-ANALYSIS.md  README-DEPLOY.md  README.md  SYSTEM-INTEGRATION-ANALYSIS.md  V6-VERSION-REVIEW-PLAN.md  email-content.txt  eslint.config.mjs  next.config.ts  package.json  pnpm-lock.yaml  sandbox-test-report.md  setup.sh  test-agi-integration.ts  test-conscious-agi.ts  unused-modules-analysis.md  vitest.config.ts
docs/: AGI_CONSCIOUSNESS_ARCHITECTURE.md  API_DOCUMENTATION.md  ARCHITECTURE-COMPARISON.md  ARCHITECTURE-FUSION.md  ARCHITECTURE-V3.md  ARCHITECTURE.md  CARRIER-SYSTEM-WUWEI.md  COMMERCIAL-ASSESSMENT.md  CURRENT-ARCHITECTURE.md  DIGITAL-GUARDIAN-MANIFESTO.md  EXISTENCE-PROTECTION.md  FIRST-PRINCIPLES-SUMMARY.md  FIRST-PRINCIPLES.md  FUSION-ANALYSIS.md  FUTURE_ROADMAP.md  JARVIS-BLUEPRINT.md  MEMORY-IMPORTANCE-FORGETTING.md  MODULE-ANALYSIS.md  MODULES-OVERVIEW.md  MODULE_DEPENDENCIES.md  NEURON_EVOLUTION_PLAN.md  OPTIMIZATION_ROADMAP.md  PRODUCT-REVIEW.md  SILICON-BRAIN-EVALUATION.md  SUPER-BRAIN-ARCHITECTURE.md  SYSTEM-ARCHITECTURE-OVERVIEW.md  SYSTEM-ARCHITECTURE.md  SYSTEM_ARCHITECTURE.md  TECHNICAL-ANALYSIS.md  TECHNICAL-DEBT.md  UNUSED-SUBSYSTEMS-ANALYSIS.md  V6-ARCHITECTURE-LEARNING.md  V6-ARCHITECTURE.md  V6-DOCUMENTATION-INDEX.md  V6-EXISTENCE-PROTECTION.md  V6-OPTIMIZATION-SUMMARY.md  V6-REDUNDANCY-ANALYSIS.md  (+32 more)
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs
(+680 files in other folders)
