[package]
name = "zi-agent"
version = "0.1.0"
description = "紫 - 自主智能体"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

[lib]
name = "zi_agent_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["core"] }
tauri-plugin-shell = "2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# 截图
screenshots = "0.6"

# 鼠标键盘控制
enigo = "0.2"

# 图片编码
base64 = "0.22"

# 异步运行时
tokio = { version = "1", features = ["full"] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
